[project]
name = "proxy"
version = "1.0.0"
description = "自动获取代理服务器"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dnspython>=2.7.0",
    "geoip2>=5.2.0",
    "requests>=2.32.3",
    "ua-generator>=2.0.5",
]

[dependency-groups]
dev = ["python-dotenv>=1.1.0", "ruff>=0.9.2"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
output-format = "grouped"
preview = true
fix = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
